--- a/welcome.html
+++ b/welcome.html
@@ -103,25 +103,62 @@
       <!-- left sidebar -->
       <!-- ============================================================== -->
       <div class="nav-left-sidebar sidebar-dark">
-        <div class="menu-list">
+        <div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto; height: 100%;"><div class="menu-list" style="overflow: hidden; width: auto; height: 100%;">
           <nav class="navbar navbar-expand-lg navbar-light">
             <a class="d-xl-none d-lg-none" href="#">Dashboard</a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-toggle="collapse"
-              data-target="#navbarNav"
-              aria-controls="navbarNav"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-              <!-- Build Left side menu items here-->
+              <ul class="navbar-nav flex-column">
+                <li class="nav-item">
+                  <a class="nav-link" href="#" data-toggle="collapse" aria-expanded="false"
+                     data-target="#submenu-2" aria-controls="submenu-2">
+                    <i class="fa fa-fw fa-rocket"></i>Administration</a>
+                  <div id="submenu-2" class="collapse submenu" style="">
+                    <ul class="nav flex-column">
+                      <li class="nav-item">
+                        <a class="nav-link" href="user-create.html">User Create</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="project-create.html">Project Create</a>
+                      </li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#" data-toggle="collapse" aria-expanded="false"
+                     data-target="#submenu-3" aria-controls="submenu-3">
+                    <i class="fas fa-fw fa-chart-pie"></i>Manager</a>
+                  <div id="submenu-3" class="collapse submenu" style="">
+                    <ul class="nav flex-column">
+                      <li class="nav-item">
+                        <a class="nav-link" href="task-create.html">Task Create</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="project-status.html">Project Status</a>
+                      </li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#" data-toggle="collapse" aria-expanded="false" data-target="#submenu-4" aria-controls="submenu-4">
+                    <i class="fab fa-fw fa-wpforms"></i>Employee</a>
+                  <div id="submenu-4" class="collapse submenu" style="">
+                    <ul class="nav flex-column">
+                      <li class="nav-item">
+                        <a class="nav-link" href="pending-tasks.html">Pending Tasks</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="archive.html">Archive</a>
+                      </li>
+                    </ul>
+                  </div>
+                </li>
+              </ul>
             </div>
           </nav>
-        </div>
+        </div><div class="slimScrollBar" style="background: rgb(0, 0, 0); width: 7px; position: absolute; top: 0px; opacity: 0.4; display: none; border-radius: 7px; z-index: 99; right: 1px; height: 986px;"></div><div class="slimScrollRail" style="width: 7px; height: 100%; position: absolute; top: 0px; display: none; border-radius: 7px; background: rgb(51, 51, 51); opacity: 0.2; z-index: 90; right: 1px;"></div></div>
       </div>
       <!-- ============================================================== -->
       <!-- end left sidebar -->
